Fix alignment for image overlays

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -250,13 +250,102 @@ footer svg:hover path {
     align-items: center;
 }
 
+.projects__box {
+    /* display: flex; */
+    /* flex: 1 1; */
+}
+
+.projects__img {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-content: center;
+    overflow: hidden;
+    /* max-height: 300px; */
+    max-height: 300px;
+    flex: 1;
+}
+
+.projects__text {
+    /* border: 2px solid green; */
+    /* min-height: 300px; */
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.projects__top {
+    height: 100%;
+    /* border: 2px solid green; */
+    /* margin: auto; */
+    display: flex;
+    align-items: center;
+}
+
+.projects__img img {
+    /* border: 2px solid red; */
+    width: 100%;
+    object-fit: cover;
+    object-position: 100% 0;
+    /* max-height: 300px; */
+}
+
+.img-overlay {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    color: white;
+    opacity: 0;     /*Hidden by default*/
+    transition: all 0.2s ease-in-out;
+    padding: 5%;
+    /* line-height: 1.5rem; */
+    font-size: 0.6rem;
+}
+.img-overlay > * {    /*All direct children of img-overlay*/
+    /* transform: translateY(20px); */
+    /* transition: transform 0.25s ease-in-out; */
+}
+
+.img-overlay__button {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.img-overlay__text {
+    /* border: 2px solid red; */
+    height: 100%;
+}
+.img-overlay:hover {
+    opacity: 1;
+}
+.img-overlay:hover > * {
+    transform: translateY(0);
+}
+.img-overlay--blur {
+    backdrop-filter: blur(5px);
+}
+.img-overlay a {
+    text-decoration: none;
+    padding: 0 10px;
+    margin: 0;
+}
+
 .projects__title {
     color: var(--text-1);
     font-size: var(--fs-h3);
     text-transform: uppercase;
     font-weight: 500;
     margin: 10px 0px;
-
+    /* border: 2px solid red; */
 }
 
 .projects__languages {
@@ -293,77 +382,6 @@ footer svg:hover path {
     text-decoration: none;
     align-items: center;
     gap: 2px;
-}
-
-.projects__box {
-    /* display: flex; */
-    /* flex: 1 1; */
-}
-
-.projects__img {
-    display: flex;
-    position: relative;
-    justify-content: center;
-    align-content: center;
-    overflow: hidden;
-    /* max-height: 300px; */
-    max-height: 300px;
-    flex: 1;
-}
-
-.projects__text {
-    /* border: 2px solid green; */
-    /* min-height: 300px; */
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-.projects__img img {
-    /* border: 2px solid red; */
-    width: 100%;
-    object-fit: cover;
-    object-position: 100% 0;
-    /* max-height: 300px; */
-}
-
-.img-overlay {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.6);
-    color: white;
-    opacity: 0;     /*Hidden by default*/
-    transition: all 0.2s ease-in-out;
-    padding: 5%;
-    /* line-height: 1.5rem; */
-    /* font-size: 0.8rem; */
-}
-.img-overlay > * {    /*All direct children of img-overlay*/
-    /* transform: translateY(20px); */
-    /* transition: transform 0.25s ease-in-out; */
-}
-.img-overlay:hover {
-    opacity: 1;
-}
-.img-overlay:hover > * {
-    transform: translateY(0);
-}
-.img-overlay--blur {
-    backdrop-filter: blur(5px);
-}
-.img-overlay a {
-    text-decoration: none;
-    padding: 0 10px;
-    margin: 0;
-    /* font-weight: 500; */
 }
 
 
@@ -609,19 +627,15 @@ section {
     background-color: var(--background);
 }
 
-.button {
-    justify-self: flex-start;
-}
-
 .button--outline-dark {
     display: inline-block;
     color: white;
     background-color: transparent;
     border-radius: 20px;
-    /* margin: 10px 20px; */
     border: 1px solid #ffffff;
     transition: background-color 250ms ease-in-out;
-    font-size: 1rem;
+    font-size: 0.8rem;
+    line-height: 1.5rem;
 }
 .button--outline-dark:hover {
     background-color: white;
